--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,9 @@
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v1.2.3
-
     hooks:
-    -   id: autopep8-wrapper
+    - id: flake8
+-   repo: https://github.com/pre-commit/mirrors-autopep8
+    rev: master
+    hooks:
+    -   id: autopep8
